--- a/css/layout.css
+++ b/css/layout.css
@@ -1,1 +1,29 @@
-/* TODO */
+body {
+	font-size: 11pt;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto, "Droid Sans", Oxygen, "Fira Sans", Ubuntu, Cantarell, "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	color: var(--foreground);
+	background-color: var(--background);
+}
+
+code,
+pre {
+	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
+}
+
+a {
+	color: var(--blue);
+	text-decoration: none;
+}
+
+a:active,
+a:hover {
+	color: var(--aqua);
+	text-decoration: underline;
+}
+
+footer a:active,
+footer a:hover,
+nav a:active,
+nav a:hover {
+	text-decoration: none;
+}
