--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,9 @@
 body {
-	font-size: 11pt;
+	font-size: 12pt;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto, "Droid Sans", Oxygen, "Fira Sans", Ubuntu, Cantarell, "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	color: var(--foreground);
 	background-color: var(--background);
+	line-height: 1.5;
 }
 
 code,
