--- a/css/layout.css
+++ b/css/layout.css
@@ -3,10 +3,11 @@ body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto, "Droid Sans", Oxygen, "Fira Sans", Ubuntu, Cantarell, "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	color: var(--foreground);
 	background-color: var(--background);
-	line-height: 1.5;
+	line-height: 1.618033;
 }
 
 code,
+kbd,
 pre {
 	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
 }
@@ -27,4 +28,63 @@ footer a:hover,
 nav a:active,
 nav a:hover {
 	text-decoration: none;
+}
+
+h1 {
+	font-size: 161.8033%;
+}
+
+h2 {
+	font-size: 131.0820%;
+}
+
+h3 {
+	font-size: 115.6317%;
+}
+
+h4 {
+	font-size: 107.8615%;
+}
+
+h5 {
+	font-size: 103.9537%;
+}
+
+h6 {
+	font-size: 101.9883%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
+}
+
+h1 + h2,
+h1 + ol,
+h1 + ul,
+h2 + h3,
+h2 + ol,
+h2 + ul,
+h3 + h4,
+h3 + ol,
+h3 + ul,
+h4 + h5,
+h4 + ol,
+h4 + ul,
+h5 + h6,
+h5 + ol,
+h5 + ul,
+h6 + ol,
+h6 + ul {
+	margin-top: 0;
+}
+
+hr,
+p {
+	margin: 1.618033em 0;
 }
