--- a/css/layout.css
+++ b/css/layout.css
@@ -7,9 +7,14 @@ body {
 }
 
 code,
-kbd,
+kbd {
+	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
+}
+
 pre {
 	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 a {
@@ -32,59 +37,82 @@ nav a:hover {
 
 h1 {
 	font-size: 161.8033%;
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
 }
 
 h2 {
 	font-size: 131.0820%;
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
 }
 
 h3 {
 	font-size: 115.6317%;
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
 }
 
 h4 {
 	font-size: 107.8615%;
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
 }
 
 h5 {
 	font-size: 103.9537%;
+	margin-top: 1.618033em;
+	margin-bottom: 1em;
 }
 
 h6 {
 	font-size: 101.9883%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
 	margin-top: 1.618033em;
 	margin-bottom: 1em;
 }
 
 h1 + h2,
 h1 + ol,
+h1 + p,
 h1 + ul,
 h2 + h3,
 h2 + ol,
+h2 + p,
 h2 + ul,
 h3 + h4,
 h3 + ol,
+h3 + p,
 h3 + ul,
 h4 + h5,
 h4 + ol,
+h4 + p,
 h4 + ul,
 h5 + h6,
 h5 + ol,
+h5 + p,
 h5 + ul,
 h6 + ol,
+h6 + p,
 h6 + ul {
 	margin-top: 0;
 }
 
-hr,
 p {
 	margin: 1.618033em 0;
+}
+
+hr {
+	border: 0;
+	border-bottom: 1px solid var(--foreground);
+	margin: 1.618033em 0;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+td,
+th {
+	border: 1px solid var(--foreground);
+	padding: 0.1618033em 0.3236066em;
 }
