--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,7 @@ pre {
 	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
 	margin-top: 0;
 	margin-bottom: 0;
+	overflow-x: auto;
 }
 
 a {
