--- a/css/print.css
+++ b/css/print.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Tinos", "Noto Serif", "Times", "Times New Roman", "Liberation Serif", serif;
+	font-family: Tinos, "Noto Serif", Cambria, "Times New Roman", "Liberation Serif", Times, serif;
 	color: black;
 	background-color: white;
 }
