--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,7 +3,9 @@ layout: default
 ---
 <div class="outer-wrapper">
 	<div class="inner-wrapper">
-		{% if site.name != "Cardboard Iguana Security" %}
+		{% if site.name == "Cardboard Iguana Security" %}
+			<div aria-hidden="true">📦🦎🛡️</div>
+		{% else %}
 			<img src="{{ site.icon }}" alt="{{ site.name }}" aria-hidden="true" id="logo">
 		{% endif %}
 		{{ content }}
