More Gemini-like

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,10 +4,18 @@ layout: default
 <div class="outer-wrapper">
 	<div class="inner-wrapper">
 		{% if site.name == "Cardboard Iguana Security" %}
-			<div aria-hidden="true">📦🦎🛡️</div>
+			<div aria-hidden="true" id="logo">📦🦎🛡️</div>
 		{% else %}
 			<img src="{{ site.icon }}" alt="{{ site.name }}" aria-hidden="true" id="logo">
 		{% endif %}
 		{{ content }}
 	</div>
 </div>
+
+<footer class="outer-wrapper">
+	<div class="inner-wrapper">
+		<ul>
+			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
+		</ul>
+	</div>
+</footer>
