--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -2,20 +2,24 @@
 layout: default
 ---
 <nav class="outer-wrapper">
-	<ul>
-		<li><a href="/index.html" aria-hidden="true">{% if site.name == "Cardboard Iguana Security" %}<span title="{{ site.name }}" id="logo">📦🦎🛡️</span>{% else %}<img src="{{ site.icon }}" alt="{{ site.name }}" title="{{ site.name }}" id="logo">{% endif %}</a> <a href="/index.html">{{ site.name }}</a></li>
-		{% if site.name == "Cardboard Iguana Security" %}
-			<li><a href="/log.html"><span aria-hidden="true">🪵 </span>Log</a></li>
-			<li><a href="/notes.html"><span aria-hidden="true">📓 </span>Notes</a></li>
-		{% elsif site.name == "Château MaxMin()" %}
-			<li><a href="/engagement/2018-07-17-set-1-the-thin-man-01.html"><span aria-hidden="true">💍 </span>Engagement</a></li>
-			<li><a href="/wedding/2019-06-29-set-1-the-ceremony-01.html"><span aria-hidden="true">💒 </span>Wedding</a></li>
-		{% elsif site.name == "necopinus.xyz" %}
-			<li><a href="/photography.html"><span aria-hidden="true">📸 </span>Photography</a></li>
-			<li><a href="/essays.html"><span aria-hidden="true">✒️ </span>Essays</a></li>
-			<li><a href="/poetry.html"><span aria-hidden="true">🎐 </span>Poetry</a></li>
-			<li><a href="/newsletters.html"><span aria-hidden="true">📯 </span>Newsletter Archive</a></li>
-		{% endif %}
-	</ul>
+	<div class="inner-wrapper">
+		<ul>
+			<li><a href="/index.html">{% if site.name == "Cardboard Iguana Security" %}<span title="{{ site.name }}" aria-hidden="true" id="logo">📦🦎🛡️</span>{% else %}<img src="{{ site.icon }}" alt="{{ site.name }}" title="{{ site.name }}" aria-hidden="true" id="logo">{% endif %} {{ site.name }}</a></li>
+			{% if site.name == "Cardboard Iguana Security" %}
+				<li><a href="/log.html"><span aria-hidden="true">🪵 </span>Log</a></li>
+				<li><a href="/notes.html"><span aria-hidden="true">📓 </span>Notes</a></li>
+				<li><a href="/atom.xml"><span aria-hidden="true">📰 </span>Feed</a></li>
+			{% elsif site.name == "Château MaxMin()" %}
+				<li><a href="/engagement.html"><span aria-hidden="true">💍 </span>Engagement</a></li>
+				<li><a href="/wedding.html"><span aria-hidden="true">💒 </span>Wedding</a></li>
+			{% elsif site.name == "necopinus.xyz" %}
+				<li><a href="/photography.html"><span aria-hidden="true">📸 </span>Photography</a></li>
+				<li><a href="/essays.html"><span aria-hidden="true">✒️ </span>Essays</a></li>
+				<li><a href="/poetry.html"><span aria-hidden="true">🎐 </span>Poetry</a></li>
+				<li><a href="/newsletters.html"><span aria-hidden="true">📯 </span>Newsletters</a></li>
+				<li><a href="/atom.xml"><span aria-hidden="true">📰 </span>Feed</a></li>
+			{% endif %}
+		</ul>
+	</div>
 </nav>
 {{ content }}
