--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,38 +56,7 @@
 		<link rel="stylesheet" href="/css/print.css" media="print">
 		<link rel="stylesheet" href="/css/code-tomorrow.css" media="print">
 	</head>
-	<body class="{% if site.name == 'Cardboard Iguana Security' %}cardboard-iguana{% elsif site.name == 'Château MaxMin()' %}chateaumaxmin{% elsif site.name == 'necopinus.xyz' %}necopinus{% endif %}" id="{{ page.name | replace: '.md', '' }}">
+	<body class="{{ site.url | replace: 'https://' | split: '.' | first }}" id="{{ page.name | replace: '.md', '' }}">
 		{{ content }}
-		<footer class="outer-wrapper">
-			<ul>
-				{% if site.name == "Château MaxMin()" %}
-					{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" %}
-						<li>Photography ©️ Carl Bower, all other content ©️ Nathan Acks</li>
-					{% else %}
-						<li>©️ Nathan Acks</li>
-					{% endif %}
-				{% else %}
-					<li>©️ Nathan Acks</li>
-				{% endif %}
-				{% if site.name == "Cardboard Iguana Security" %}
-					<li><a href="https://necopinus.xyz"><span aria-hidden="true">🌱 </span>Homepage</a></li>
-					<li><a href="https://twitter.com/necopinus"><span aria-hidden="true">🐦 </span>Twitter</a></li>
-					<li><a href="https://github.com/necopinus"><span aria-hidden="true">🐙 </span>GitHub</a></li>
-					<li><a href="https://registry.jsonresume.org/necopinus"><span aria-hidden="true">🧑‍💻 </span>Resume</a></li>
-					<li><a href="https://www.linkedin.com/in/necopinus"><span aria-hidden="true">🌆 </span>LinkedIn</a></li>
-					<li><a href="https://keybase.io/necopinus"><span aria-hidden="true">🔏 </span>Keybase</a></li>
-					<li><a href="/atom.xml"><span aria-hidden="true">📰 </span>Site Feed</a></li>
-					<li><a href="mailto:nathan.acks@cardboard-iguana.com"><span aria-hidden="true">📧 </span>Email</a></li>
-				{% elsif site.name == "Château MaxMin()" %}
-					<li><a href="mailto:nathan.acks@chateaumaxmin.info"><span aria-hidden="true">📧 </span>Email</a></li>
-				{% elsif site.name == "necopinus.xyz" %}
-					<li><a href="https://cardboard-iguana.com"><span aria-hidden="true">💻 </span>Cardboard Iguana Security</a></li>
-					<li><a href="https://chateaumaxmin.info"><span aria-hidden="true">🏡 </span>Château MaxMin()</a></li>
-					<li><a href="https://twitter.com/necopinus"><span aria-hidden="true">🐦 </span>Twitter</a></li>
-					<li><a href="/atom.xml"><span aria-hidden="true">📰 </span>Site Feed</a></li>
-					<li><a href="mailto:nathan.acks@necopinus.xyz"><span aria-hidden="true">📧 </span>Email</a></li>
-				{% endif %}
-			</ul>
-		</footer>
 	</body>
 </html>
