--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ layout: navigation
 <footer class="outer-wrapper">
 	<div class="inner-wrapper">
 		<ul>
-			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
+			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 		</ul>
 	</div>
 </footer>
