--- a/css/page-tomorrow.css
+++ b/css/page-tomorrow.css
@@ -3,6 +3,7 @@
 :root {
 	--background: #ffffff;
 	--foreground: #4d4d4c;
+	--foreground-fade: #4d4d4c9e;
 	--red: #c82829;
 	--orange: #f5871f;
 	--yellow: #eab700;
