--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
 		<title>{{ page_title }}</title>
 
-		<link rel="icon" href="{{ site.icon }}">
+		<link rel="icon" href="/{{ site.icon }}">
 		<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/atom.xml">
 
 		{% assign page_path_array = page.url | split: "/" %}
@@ -43,18 +43,19 @@
 		<meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
 		<link rel="stylesheet" href="/css/normalize.css">
+		<link rel="stylesheet" href="/css/code-tomorrow.css" media="print">
 		{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" or page_path_array[1] == "digital-orrery" or page_path_array[1] == "photography" %}
-			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css">
-			<link rel="stylesheet" href="/css/page-tomorrow-night.css">
+			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css" media="screen">
+			<link rel="stylesheet" href="/css/page-tomorrow.css" media="print">
+			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen">
 		{% else %}
-			<link rel="stylesheet" href="/css/code-tomorrow-night.css" media="(prefers-color-scheme: light)">
-			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css" media="(prefers-color-scheme: dark)">
-			<link rel="stylesheet" href="/css/page-tomorrow.css" media="(prefers-color-scheme: light)">
-			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="(prefers-color-scheme: dark)">
+			<link rel="stylesheet" href="/css/code-tomorrow-night.css" media="screen and (prefers-color-scheme: light)">
+			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css" media="screen and (prefers-color-scheme: dark)">
+			<link rel="stylesheet" href="/css/page-tomorrow.css" media="print or (screen and (prefers-color-scheme: light))">
+			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen and (prefers-color-scheme: dark)">
 		{% endif %}
 		<link rel="stylesheet" href="/css/layout.css">
 		<link rel="stylesheet" href="/css/print.css" media="print">
-		<link rel="stylesheet" href="/css/code-tomorrow.css" media="print">
 	</head>
 	<body class="{{ site.url | replace: 'https://' | split: '.' | first }}" id="{{ page.name | replace: '.md', '' }}">
 		{{ content }}
