--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -6,7 +6,7 @@ layout: default
 		{% if site.name == "Cardboard Iguana Security" %}
 			<div aria-hidden="true" id="logo">📦🦎🛡️</div>
 		{% else %}
-			<img src="{{ site.icon }}" alt="{{ site.name }}" aria-hidden="true" id="logo">
+			<img src="/{{ site.icon }}" alt="{{ site.name }}" aria-hidden="true" id="logo">
 		{% endif %}
 		{{ content }}
 	</div>
