--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -15,6 +15,7 @@ layout: default
 <footer class="outer-wrapper">
 	<div class="inner-wrapper">
 		<ul>
+			<li>©️ {{ site.author }}</li>
 			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 		</ul>
 	</div>
