--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -10,6 +10,7 @@ layout: navigation
 <footer class="outer-wrapper">
 	<div class="inner-wrapper">
 		<ul>
+			<li>©️ {{ site.author }}</li>
 			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 		</ul>
 	</div>
