--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,18 +34,19 @@ layout: navigation
 		{% assign post_last = post_list.size | minus: 1 %}
 
 		<ul>
+			<li>©️ {{ site.author }}{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" %}, photography ©️ Carl Bower{% endif %}</li>
 			{% if post_before < 0 %}
 				<li><span class="inactive-link"><span aria-hidden="true">‹ </span>Previous</span></li>
 			{% else %}
 				<li><a href="{{ post_list[post_before].url }}" class="inactive-link"><span aria-hidden="true">‹ </span>Previous</a></li>
 			{% endif %}
 			<li><a href="/{{ category_name }}.html"><span aria-hidden="true">[ </span>Category<span aria-hidden="true"> ]</span></a></li>
-			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 			{% if post_after > post_last %}
 				<li><span class="inactive-link">Next<span aria-hidden="true"> ›</span></span></li>
 			{% else %}
 				<li><a href="{{ post_list[post_after].url }}" class="inactive-link">Next<span aria-hidden="true"> ›</span></a></li>
 			{% endif %}
+			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 		</ul>
 	</div>
 </footer>
