--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,14 +44,14 @@
 
 		<link rel="stylesheet" href="/css/normalize.css">
 		<link rel="stylesheet" href="/css/code-tomorrow.css" media="print">
+		<link rel="stylesheet" href="/css/page-tomorrow.css" media="print">
 		{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" or page_path_array[1] == "digital-orrery" or page_path_array[1] == "photography" %}
 			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css" media="screen">
-			<link rel="stylesheet" href="/css/page-tomorrow.css" media="print">
 			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen">
 		{% else %}
 			<link rel="stylesheet" href="/css/code-tomorrow-night.css" media="screen and (prefers-color-scheme: light)">
 			<link rel="stylesheet" href="/css/code-tomorrow-night-bright.css" media="screen and (prefers-color-scheme: dark)">
-			<link rel="stylesheet" href="/css/page-tomorrow.css" media="print or (screen and (prefers-color-scheme: light))">
+			<link rel="stylesheet" href="/css/page-tomorrow.css" media="screen and (prefers-color-scheme: light)">
 			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen and (prefers-color-scheme: dark)">
 		{% endif %}
 		<link rel="stylesheet" href="/css/layout.css">
