--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,10 @@
 			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen and (prefers-color-scheme: dark)">
 		{% endif %}
 		<link rel="stylesheet" href="/css/layout.css">
+		<link rel="stylesheet" href="/css/narrow.css" media="(max-width: 35.236066rem)">
 		<link rel="stylesheet" href="/css/print.css" media="print">
 	</head>
-	<body class="{{ site.url | replace: 'https://' | split: '.' | first }}" id="{{ page.name | replace: '.md', '' }}">
+	<body class="{{ site.url | replace: 'https://' | split: '.' | first }} {{ page.layout }}" id="{{ page.name | replace: '.md', '' }}">
 		{{ content }}
 	</body>
 </html>
