--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -1,17 +1,8 @@
 ---
-layout: navigation
+layout: footer
 ---
 <div class="outer-wrapper">
 	<div class="inner-wrapper">
 		{{ content }}
 	</div>
 </div>
-
-<footer class="outer-wrapper">
-	<div class="inner-wrapper">
-		<ul>
-			<li>©️ {{ site.author }}</li>
-			<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
-		</ul>
-	</div>
-</footer>
