--- a/css/layout.css
+++ b/css/layout.css
@@ -1,19 +1,26 @@
+html {
+	height: 100%;
+}
+
 body {
 	font-size: 12pt;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto, "Droid Sans", Oxygen, "Fira Sans", Ubuntu, Cantarell, "Helvetica Neue", "Calibri", "Liberation Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	color: var(--foreground);
 	background-color: var(--background);
 	line-height: 1.618033;
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
 }
 
 code,
 kbd {
-	font-size: 98.3819%;
 	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
 }
 
 pre {
-	font-size: 93.5728%;
+	font-size: 85.4377%; /* 100-(1.618033*9) */
 	font-family: SFMono-Regular, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", Consolas, "Roboto Mono", "Droid Sans Mono", "Fira Mono", "Source Code Pro", "Liberation Mono", "Courier New", Courier, monospace, monospace;
 	margin-top: 0;
 	margin-bottom: 0;
@@ -36,7 +43,44 @@ a:hover {
 }
 
 nav {
+	flex: 0 0 auto;
 	border-bottom: 1px solid var(--foreground-fade);
+}
+
+nav ul {
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+nav ul li {
+	flex: 0 1 0;
+	display: block;
+	padding: 0.4635em 0.618033em 0;
+	margin: auto 0;
+	text-align: right;
+	white-space: nowrap;
+}
+
+nav ul li:first-child {
+	flex: 1 1 0;
+	padding-top: 0;
+	padding-left: 0;
+	text-align: left;
+	font-weight: bold;
+}
+
+nav ul li:first-child a {
+	color: var(--foreground);
+}
+
+nav ul li:last-child {
+	padding-right: 0;
+}
+
+article,
+body > div {
+	flex: 1 1 auto;
 }
 
 article img {
@@ -46,7 +90,7 @@ article img {
 
 h1 {
 	font-size: 161.8033%;
-	margin: 1.618033em auto 1em auto;
+	margin: 1.618033em auto 1em;
 	padding-bottom: 0.1545em;
 	/* width: 80.5836%; */
 	text-align: center;
@@ -55,27 +99,27 @@ h1 {
 
 h2 {
 	font-size: 131.0820%;
-	margin: 1.618033em 0 1em 0;
+	margin: 1.618033em 0 1em;
 }
 
 h3 {
 	font-size: 115.6317%;
-	margin: 1.618033em 0 1em 0;
+	margin: 1.618033em 0 1em;
 }
 
 h4 {
 	font-size: 107.8615%;
-	margin: 1.618033em 0 1em 0;
+	margin: 1.618033em 0 1em;
 }
 
 h5 {
 	font-size: 103.9537%;
-	margin: 1.618033em 0 1em 0;
+	margin: 1.618033em 0 1em;
 }
 
 h6 {
 	font-size: 101.9883%;
-	margin: 1.618033em 0 1em 0;
+	margin: 1.618033em 0 1em;
 }
 
 h1 + h2,
@@ -137,42 +181,32 @@ hr:last-of-type {
 }
 
 footer {
+	flex: 0 0 auto;
 	border-top: 1px solid var(--foreground-fade);
 }
 
 footer ul {
 	padding: 0;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 }
 
 footer ul li {
-	flex: 1 1 0px;
+	flex: 1 1 0;
 	display: block;
-	padding: 0 0.3236066em;
+	padding: 0 0.618033em;
 	text-align: center;
 	white-space: nowrap;
 }
 
 footer ul li:first-child {
 	padding-left: 0;
-	white-space: normal;
-}
-
-footer ul li:first-child,
-footer ul li:nth-last-child(2) {
-	flex: 2 2 0px;
 	text-align: left;
-}
-
-footer ul li:last-child,
-footer ul li:nth-child(2) {
-	flex: 2 2 0px;
-	text-align: right;
 }
 
 footer ul li:last-child {
 	padding-right: 0;
+	text-align: right;
 }
 
 /* Scrollbar styling */
@@ -201,20 +235,24 @@ footer ul li:last-child {
 	border: none;
 }  
 
-/* Per-class and ID styling */
+/* General per-class and ID styling */
 
 .outer-wrapper {
 	padding: 0 1.618033rem;
 }
 
 .inner-wrapper {
-	max-width: 34rem;
+	max-width: 32rem;
 	margin: 0 auto;
 }
 
 .table-wrapper {
-	max-width: 34rem;
+	max-width: 100%;
 	overflow-x: auto;
+}
+
+nav #logo {
+	font-size: 161.8033%;
 }
 
 div.highlight {
@@ -228,12 +266,12 @@ pre.highlight {
 
 /* Page-specific styling */
 
-#README #logo {
+.homepage div#logo {
 	width: fit-content;
 	margin: 0.3090em auto 0.1545em auto;
 	font-size: 485.4099%;
 }
 
-#README #logo + h1 {
+.homepage div#logo + h1 {
 	margin-top: 0;
 }
