--- a/css/layout.css
+++ b/css/layout.css
@@ -56,7 +56,7 @@ nav ul {
 nav ul li {
 	flex: 0 1 0;
 	display: block;
-	padding: 0.4635em 0.618033em 0;
+	padding: 0 0.618033em;
 	margin: auto 0;
 	text-align: right;
 	white-space: nowrap;
@@ -85,6 +85,7 @@ body > div {
 
 article img {
 	width: 100%;
+	margin-bottom: -0.46352475em;
 	border-radius: 0.618033rem;
 }
 
@@ -92,7 +93,6 @@ h1 {
 	font-size: 161.8033%;
 	margin: 1.618033em auto 1em;
 	padding-bottom: 0.1545em;
-	/* width: 80.5836%; */
 	text-align: center;
 	border-bottom: 1px solid var(--foreground-fade);
 }
@@ -251,8 +251,19 @@ footer ul li:last-child {
 	overflow-x: auto;
 }
 
-nav #logo {
+nav span#logo {
+	display: inline-block;
+	margin-right: 0.1545em;
 	font-size: 161.8033%;
+	vertical-align: middle;
+}
+
+nav img#logo {
+	margin-right: 0.3090em;
+	font-size: 161.8033%;
+	height: 1.618033em;
+	border-radius: 50%;
+	vertical-align: middle;
 }
 
 div.highlight {
@@ -272,6 +283,13 @@ pre.highlight {
 	font-size: 485.4099%;
 }
 
-.homepage div#logo + h1 {
+.homepage img#logo {
+	display: block;
+	width: 61.8033%;
+	margin: 2.2360rem auto;
+	border-radius: 50%;
+}
+
+.homepage #logo + h1 {
 	margin-top: 0;
 }
