--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: navigation
 	{% assign post_last = post_list.size | minus: 1 %}
 
 	<ul>
-		<li>©️ {{ site.author }}{% if page_path_array[1] == "engagement" or page_path_array[1] == "wedding" %} (text)<br>©️ Carl Bower (photo){% endif %}</li>
+		<li>©️ {{ site.author }}{% if category_name == "engagement" or category_name == "wedding" %} (text)<br>©️ Carl Bower (photo){% endif %}</li>
 		<li>
 		{% if post_before < 0 %}
 			<span class="inactive-link"><span aria-hidden="true">‹ </span>Previous</span>
