Fix for Firefox not supporting 'width: fit-content;'

--- a/css/layout.css
+++ b/css/layout.css
@@ -296,6 +296,7 @@ pre.highlight {
 	width: fit-content;
 	margin: 0.3090em auto 0.1545em auto;
 	font-size: 485.4099%;
+	text-align: center;
 }
 
 .homepage img#logo {
