--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 			{% endfor %}
 		{% endunless %}
 
-		{% assign page_title = page_title | remove: "🎐" | remove: "📸" | remove: "📯" | remove: "🌱" | remove: "✒️" | remove: "📷" | remove: "🔮" | remove: "🏡" | remove: "📓" | remove: "🪵" | remove: "💒" | remove: "💍" | remove: "📦" | remove: "🦎" | remove: "🛡️" | remove: "🐦" | remove: "🐙" | remove: "🧑‍💻" | remove: "🌃" | remove: "🔏" | remove: "📧" | remove: "👤" | remove: "🏷️" | remove: "👥" | remove: "📅" | lstrip | rstrip | smartify %}
+		{% assign page_title = page_title | remove: "🎐" | remove: "📸" | remove: "📯" | remove: "🌱" | remove: "📷" | remove: "🔮" | remove: "🏡" | remove: "📚" | remove: "📓" | remove: "💒" | remove: "💍" | remove: "📦" | remove: "🦎" | remove: "🛡️" | remove: "🐦" | remove: "🐙" | remove: "📄" | remove: "🌃" | remove: "🔏" | remove: "📧" | remove: "👤" | remove: "🏷️" | remove: "👥" | remove: "📅" | lstrip | rstrip | smartify %}
 
 		<title>{{ page_title }}</title>
 
