--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,12 @@
+html, body {
+	font-size: calc(min(max(3.125vw, 12pt), 15pt));
+}
+
 html {
 	height: 100%;
 }
 
 body {
-	font-size: 12pt;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Roboto, "Droid Sans", Oxygen, "Fira Sans", Ubuntu, Cantarell, "Helvetica Neue", "Calibri", "Liberation Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	color: var(--foreground);
 	background-color: var(--background);
