--- a/css/print.css
+++ b/css/print.css
@@ -1,3 +1,7 @@
+html, body {
+	font-size: 12pt;
+}
+
 body {
 	font-family: Tinos, "Noto Serif", Cambria, "Times New Roman", "Liberation Serif", Times, serif;
 }
