--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,9 +84,9 @@
 			<link rel="stylesheet" href="/css/page-tomorrow-night.css" media="screen and (prefers-color-scheme: dark)">
 		{% endif %}
 		<link rel="stylesheet" href="/css/layout.css">
-		<link rel="stylesheet" href="/css/layout-48.css" media="(max-width: 48rem)">
-		<link rel="stylesheet" href="/css/layout-45.css" media="(max-width: 45.750558rem)">
-		<link rel="stylesheet" href="/css/layout-38.css" media="(max-width: 38.803482rem)">
+		<link rel="stylesheet" href="/css/layout-48.css" media="(max-width: 967px)">
+		<link rel="stylesheet" href="/css/layout-45.css" media="(max-width: 922px)">
+		<link rel="stylesheet" href="/css/layout-38.css" media="(max-width: 788px)">
 		<link rel="stylesheet" href="/css/print.css" media="print">
 	</head>
 	<body class="{{ site.url | replace: 'https://' | split: '.' | first }} {{ page.layout }}" id="{{ page.name | replace: '.md', '' }}">
