Use normal © symbol, as emoji version doesn't look good when using the dark theme

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -14,7 +14,7 @@ layout: default
 
 <footer class="outer-wrapper">
 	<ul>
-		<li>©️ {{ site.author }}</li>
+		<li>© {{ site.author }}</li>
 		<li><a href="https://github.com/necopinus/{{ site.url  | replace: 'https://' }}/blob/main/{{ page.path }}"><span aria-hidden="true">[ </span>Source<span aria-hidden="true"> ]</span></a></li>
 	</ul>
 </footer>
